# backend/src/routes/auth.js
@@ -10,10 +10,10 @@ const auth = require('../controllers/auth')
 
 // URL: /auth
 
-router.post('/login', auth.login)
-router.post('/refresh', auth.refresh)
-router.get('/logout', auth.logout)
-router.post('/logout', auth.logout)
+router.post('/login', auth.login) // SimpleToken & JWT
+router.post('/refresh', auth.refresh) // JWT Refresh
+router.get('/logout', auth.logout) // SimpleToken Logout
+router.post('/logout', auth.logout) // SimpleToken Logout
 
 /* ------------------------------------------------------- */
 module.exports = router
