# backend/src/routes/index.js
@@ -10,6 +10,10 @@ const router = require('express').Router()
 
 // auth:
 router.use('/account/auth', require('./auth'))
+// call user.create for /account/register:
+const { create: userCreate } = require('../controllers/user')
+router.post('/account/register', userCreate)
+
 // user:
 router.use('/users', require('./user'))
 // token:
@@ -17,17 +21,17 @@ router.use('/tokens', require('./token'))
 
 
 // brand:
-router.use('/brands', require('./brand'))
+router.use('/stock/brands', require('./brand'))
 // category:
-router.use('/categories', require('./category'))
+router.use('/stock/categories', require('./category'))
 // firm:
-router.use('/firms', require('./firm'))
+router.use('/stock/firms', require('./firm'))
 // product:
-router.use('/products', require('./product'))
+router.use('/stock/products', require('./product'))
 // purchase:
-router.use('/purchases', require('./purchase'))
+router.use('/stock/purchases', require('./purchase'))
 // sale:
-router.use('/sales', require('./sale'))
+router.use('/stock/sales', require('./sale'))
 
 // document:
 router.use('/documents', require('./document'))
